--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,27 +28,27 @@
       Big thank to phamhiep2506 for great code</p>
       <p class="has-line-data" data-line-start="3" data-line-end="4">Support Get API</p>
       <p class="has-line-data" data-line-start="5" data-line-end="8">Get SongURL direct (new):<br>
-      <a href="https://music-player-pink.vercel.app/api/songUrl?id=%7Bparam-id-song%7D">https://music-player-pink.vercel.app/api/songUrl?id={param-id-song}</a><br>
-      <a href="https://music-player-pink.vercel.app/api/songUrl?id=ZUUUEEIE">https://music-player-pink.vercel.app/api/songUrl?id=ZUUUEEIE</a></p>
+      <a href="https://api-zingmp3-nct.vercel.app/api/songUrl?id=%7Bparam-id-song%7D">https://api-zingmp3-nct.vercel.app/api/songUrl?id={param-id-song}</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/songUrl?id=ZUUUEEIE">https://api-zingmp3-nct.vercel.app/api/songUrl?id=ZUUUEEIE</a></p>
       <p class="has-line-data" data-line-start="9" data-line-end="10">redirect to url song</p>
       <p class="has-line-data" data-line-start="9" data-line-end="10">https://vnso-zn-23-tf-mp3-s1-zmp3.zadn.vn/956cefbc94f87da624e9/2766204956296265927?authen=exp=1639716009~acl=/956cefbc94f87da624e9/*~hmac=e58801252685398cd353c2016765930e&fs=MTYzOTU0MzIwOTY4N3x3ZWJWNnwwfDE0LjE4OC40Mi4xNA</p>
       <p class="has-line-data" data-line-start="12" data-line-end="25">Get Song:<br>
-      <a href="https://music-player-pink.vercel.app/api/song?id=%7Bparam-id-song%7D">https://music-player-pink.vercel.app/api/song?id={param-id-song}</a><br>
-      <a href="https://music-player-pink.vercel.app/api/song?id=ZUUUEEIE">https://music-player-pink.vercel.app/api/song?id=ZUUUEEIE</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/song?id=%7Bparam-id-song%7D">https://api-zingmp3-nct.vercel.app/api/song?id={param-id-song}</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/song?id=ZUUUEEIE">https://api-zingmp3-nct.vercel.app/api/song?id=ZUUUEEIE</a><br>
       res<br>
       <code>{ &quot;err&quot;: 0, &quot;msg&quot;: &quot;Success&quot;, &quot;data&quot;: { &quot;128&quot;: &quot;https://mp3-s1-zmp3.zadn.vn/e7e000cc268dcfd3969c/2172183184086830160?authen=exp=1639716772~acl=/e7e000cc268dcfd3969c/*~hmac=09483633ac7bb06621ca32cb66548c36&amp;fs=MTYzOTU0Mzk3Mjg0M3x3ZWJWNnwwfDI3LjmUsICyLjEwMC4xNjU&quot;, &quot;320&quot;: &quot;VIP&quot; }, &quot;timestamp&quot;: 1639544305216 }</code></p>
       <p class="has-line-data" data-line-start="26" data-line-end="29">Get Playlist:<br>
-      <a href="https://music-player-pink.vercel.app/api/playlist?id=%7Bparam-id-playlist%7D">https://music-player-pink.vercel.app/api/playlist?id={param-id-playlist}</a><br>
-      <a href="https://music-player-pink.vercel.app/api/playlist?id=ZWZB969E">https://music-player-pink.vercel.app/api/playlist?id=ZWZB969E</a></p>
+      <a href="https://api-zingmp3-nct.vercel.app/api/playlist?id=%7Bparam-id-playlist%7D">https://api-zingmp3-nct.vercel.app/api/playlist?id={param-id-playlist}</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/playlist?id=ZWZB969E">https://api-zingmp3-nct.vercel.app/api/playlist?id=ZWZB969E</a></p>
       <p class="has-line-data" data-line-start="30" data-line-end="33">Get Top 100:<br>
-      <a href="https://music-player-pink.vercel.app/api/top100">https://music-player-pink.vercel.app/api/top100</a><br>
-      <a href="https://music-player-pink.vercel.app/api/top100">https://music-player-pink.vercel.app/api/top100</a></p>
+      <a href="https://api-zingmp3-nct.vercel.app/api/top100">https://api-zingmp3-nct.vercel.app/api/top100</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/top100">https://api-zingmp3-nct.vercel.app/api/top100</a></p>
       <p class="has-line-data" data-line-start="34" data-line-end="37">Get Charthome:<br>
-      <a href="https://music-player-pink.vercel.app/api/chart-home">https://music-player-pink.vercel.app/api/chart-home</a><br>
-      <a href="https://music-player-pink.vercel.app/api/chart-home">https://music-player-pink.vercel.app/api/chart-home</a></p>
+      <a href="https://api-zingmp3-nct.vercel.app/api/chart-home">https://api-zingmp3-nct.vercel.app/api/chart-home</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/chart-home">https://api-zingmp3-nct.vercel.app/api/chart-home</a></p>
       <p class="has-line-data" data-line-start="38" data-line-end="41">Get Info Song:<br>
-      <a href="https://music-player-pink.vercel.app/api/info?id=%7Bparam-id-song%7D">https://music-player-pink.vercel.app/api/info?id={param-id-song}</a><br>
-      <a href="https://music-player-pink.vercel.app/api/info?id=ZUUUEEIE">https://music-player-pink.vercel.app/api/info?id=ZUUUEEIE</a></p>
+      <a href="https://api-zingmp3-nct.vercel.app/api/info?id=%7Bparam-id-song%7D">https://api-zingmp3-nct.vercel.app/api/info?id={param-id-song}</a><br>
+      <a href="https://api-zingmp3-nct.vercel.app/api/info?id=ZUUUEEIE">https://api-zingmp3-nct.vercel.app/api/info?id=ZUUUEEIE</a></p>
     
     </article>
     </body>
