--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
   <body>
     <div class="markdown-body">
 
-      <zero-md src="read.js">
+      <zero-md src="README.md">
         <template>
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sindresorhus/github-markdown-css@4/github-markdown.min.css">
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/PrismJS/prism@1/themes/prism.min.css">
