form get zing mp3

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,12 @@
   </head>
   <body>
     <div class="markdown-body">
-
+      <form action="https://api-zingmp3-nct.vercel.app/api/linkRedirect" method="get">
+        <pre>Paste mp3 link and click: 
+          https://zingmp3.vn/album/La-Con-Gai-Phai-Xinh-Single-Bao-Thy-Kimmese/ZOZ7I06Z.html</pre>
+        <input type="text" name="id" id="">
+        <button type="submit">Get mp3 file</button>
+      </form>
       <zero-md src="README.md">
         <template>
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sindresorhus/github-markdown-css@4/github-markdown.min.css">
