--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,8 @@
   <body>
     <div class="markdown-body">
       <form action="https://api-zingmp3-nct.vercel.app/api/linkRedirect" method="get">
-        <pre>Paste mp3 link and click: 
-          https://zingmp3.vn/album/La-Con-Gai-Phai-Xinh-Single-Bao-Thy-Kimmese/ZOZ7I06Z.html</pre>
+        <pre>Paste mp3 link and click: </pre>
+        <pre>https://zingmp3.vn/album/La-Con-Gai-Phai-Xinh-Single-Bao-Thy-Kimmese/ZOZ7I06Z.html</pre>
         <input type="text" name="id" id="">
         <button type="submit">Get mp3 file</button>
       </form>
